--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@vueuse/core": "^10.1.2",
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
+    "marked": "^5.0.1",
+    "marked-gfm-heading-id": "^3.0.3",
+    "marked-mangle": "^1.0.1",
     "pinia": "^2.0.35",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
@@ -23,6 +26,7 @@
     "@iconify-json/carbon": "^1.1.16",
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.0",
+    "@types/marked": "^4.3.0",
     "@types/node": "^20.1.0",
     "@unocss/preset-icons": "^0.51.12",
     "@unocss/reset": "^0.51.12",
