--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite --port=3333",
+    "dev": "vite --host=127.0.0.1 --port=3333",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build",
