--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vueuse/core": "^10.1.2",
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
+    "emoji-picker-element": "^1.17.0",
     "marked": "^5.0.1",
     "marked-gfm-heading-id": "^3.0.3",
     "marked-mangle": "^1.0.1",
