--- a/.drone.yml
+++ b/.drone.yml
@@ -10,6 +10,8 @@ trigger:
 steps:
   - name: docker build
     image: plugins/docker
+    environment:
+      DOCKER_BUILDKIT: 1
     settings:
       registry: 192.168.2.33:47382
       insecure: true
