--- a/.drone.yml
+++ b/.drone.yml
@@ -3,7 +3,7 @@ type: docker
 name: mblog-front
 trigger:
   branch:
-    - main
+    - prod
   event:
     - push
 
@@ -23,17 +23,17 @@ steps:
       password:
         from_secret: docker_password
 
-  - name: start service
-    image: appleboy/drone-ssh
-    settings:
-      host:
-        - 192.168.2.33
-      username: root
-      key:
-        from_secret: ds920_private_key
-      port: 22
-      command_timeout: 2m
-      script:
-        - cd /volume1/docker/drone/mblog-front/
-        - chmod +x ./startup.sh
-        - ./startup.sh
+  # - name: start service
+  #   image: appleboy/drone-ssh
+  #   settings:
+  #     host:
+  #       - 192.168.2.33
+  #     username: root
+  #     key:
+  #       from_secret: ds920_private_key
+  #     port: 22
+  #     command_timeout: 2m
+  #     script:
+  #       - cd /volume1/docker/drone/mblog-front/
+  #       - chmod +x ./startup.sh
+  #       - ./startup.sh
