--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type-check": "vue-tsc --noEmit",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
-    "build-cf": "sed s/'REPLACE_VERSION_HERE'/'`git describe --tags --abbrev=0`'/g .env.production && build-only"
+    "build-cf": "sh ./cf.sh"
   },
   "dependencies": {
     "@vueuse/core": "^10.1.2",
