加入评论,点赞,计数等功能

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -8,6 +8,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
+    "lib": ["ES2021"],
     "types": ["vite-plugin-pages/client", "vite/client", "naive-ui/volar"]
   }
 }
