--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@vueuse/core": "^10.1.2",
     "@vueuse/integrations": "^10.1.2",
+    "@vueuse/motion": "^2.0.0-beta.12",
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
     "drauu": "^0.3.2",
