--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vite --host=127.0.0.1 --port=3333",
+    "devallinone": "vite --host=127.0.0.1 --port=3333 --mode=all",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build",
