--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.4",
     "vite-plugin-pages": "^0.29.0",
+    "vite-plugin-pwa": "^0.16.1",
     "vite-plugin-vue-layouts": "^0.8.0",
     "vue-tsc": "^1.6.4"
   }
